# botun-aura-server

./: Cargo.toml  README.md  env.example  task.md
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx
src/: main.rs
