[package]
name = "botun-aura-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
fern = { version = "0.7.1", features = ["colored"] }
futures = "0.3.31"
hex = "0.4.3"
libp2p = { version = "0.55.0", features = [
    "noise", "ping", "tcp", "tokio", "yamux",
    "gossipsub", "macros", "mdns", "identify", "rendezvous"
    ] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = {version = "0.6.6", features= ["fs"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
